--- a/bayes_limits/plot.ipynb
+++ b/bayes_limits/plot.ipynb
@@ -188,6 +188,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.41708793 0.98312076]\n",
+      "[0.44215018 0.53200896]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.random.seed()\n",
+    "print(np.random.rand(2))\n",
+    "np.random.seed()\n",
+    "print(np.random.rand(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
