--- a/bayes_limit.ipynb
+++ b/bayes_limit.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -14018,7 +14018,46 @@
       "Finished 25.00 percent in 1454.212790 s Acceptance rate = 0.3813Adding DE jump with weight 20\n",
       "Finished 25.00 percent in 1501.220565 s Acceptance rate = 0.386682Adding DE jump with weight 20\n",
       "Finished 25.00 percent in 1517.772166 s Acceptance rate = 0.377127Adding DE jump with weight 20\n",
-      "Finished 95.00 percent in 4729.840185 s Acceptance rate = 0.339474"
+      "Finished 97.50 percent in 4857.845767 s Acceptance rate = 0.319436\n",
+      "Run Complete\n",
+      "Finished 97.50 percent in 4891.030468 s Acceptance rate = 0.305718\n",
+      "Run Complete\n",
+      "Finished 95.00 percent in 4942.731431 s Acceptance rate = 0.330316\n",
+      "Run Complete\n",
+      "\n",
+      "Run Complete\n",
+      "Finished 97.50 percent in 4959.214102 s Acceptance rate = 0.345282\n",
+      "Run Complete\n",
+      "\n",
+      "Run Complete\n",
+      "Finished 92.50 percent in 4971.249008 s Acceptance rate = 0.325541\n",
+      "Run Complete\n",
+      "Finished 97.50 percent in 4971.654533 s Acceptance rate = 0.322385\n",
+      "Run Complete\n",
+      "\n",
+      "Run Complete\n",
+      "Finished 97.50 percent in 4974.014718 s Acceptance rate = 0.32259\n",
+      "Run Complete\n",
+      "\n",
+      "Run Complete\n",
+      "\n",
+      "Run Complete\n",
+      "Finished 97.50 percent in 5007.915284 s Acceptance rate = 0.329846\n",
+      "Run Complete\n",
+      "\n",
+      "Run Complete\n",
+      "Finished 95.00 percent in 5029.976130 s Acceptance rate = 0.325211\n",
+      "Run Complete\n",
+      "\n",
+      "Run Complete\n",
+      "\n",
+      "Run Complete\n",
+      "\n",
+      "Run Complete\n",
+      "\n",
+      "Run Complete\n",
+      "Finished 97.50 percent in 5067.000815 s Acceptance rate = 0.326641\n",
+      "Run Complete\n"
      ]
     }
    ],
