--- a/bayes_limit.ipynb
+++ b/bayes_limit.ipynb
@@ -2,26 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: enterprise.signals.signal_base: No sksparse library. Using scipy instead!\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You'll need sksparse for get_coefficients() with common signals!\n",
-      "Cannot import PINT? Meh...\n",
-      "Do not have mpi4py package.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import glob\n",
     "import sys\n",
@@ -48,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -181,7 +164,7 @@
    "source": [
     "psrs=[]\n",
     "for ipsr in range(len(parfiles)):\n",
-    "    psr = Pulsar(parfiles[ipsr], timfiles[ipsr])\n",
+    "    psr = Pulsar(parfiles[ipsr], timfiles[ipsr],ephem=\"DE436\",clk=\"TT(BIPM2018)\")\n",
     "    psrs.append(psr)\n",
     "    print(psr.name)"
    ]
