--- a/interference/Interference_vector_gpu.ipynb
+++ b/interference/Interference_vector_gpu.ipynb
@@ -437,14 +437,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100000/100000 [04:55<00:00, 338.88it/s]\n"
+      "100%|██████████| 100000/100000 [04:27<00:00, 373.40it/s]\n"
      ]
     }
    ],
@@ -467,9 +467,9 @@
     "\n",
     "ty = cp.zeros((4,nPoints))\n",
     "ty[0,:] = tlist[:-1]*t_corr\n",
-    "ty[1,:] = cp.tile(l_dB,nPoints)*20.48\n",
+    "ty[1,:] = cp.tile(l_dB,nPoints)*0\n",
     "\n",
-    "nParticles = 2**10\n",
+    "nParticles = 2**0\n",
     "output=[]\n",
     "\n",
     "nSimulation= 100000\n",
@@ -511,14 +511,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array(-0.00434179), array(-0.00549679), array(-0.00084351), array(-0.00133677), array(0.00223206), array(-0.00334016)]\n"
+      "[array(1.), array(-0.45833148), array(1.), array(0.30266928), array(0.00394405), array(0.00238765)]\n"
      ]
     }
    ],
