--- a/noise_fixing.ipynb
+++ b/noise_fixing.ipynb
@@ -2,21 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: enterprise.signals.signal_base: No sksparse library. Using scipy instead!\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You'll need sksparse for get_coefficients() with common signals!\n",
       "Cannot import PINT? Meh...\n",
       "Do not have mpi4py package.\n"
      ]
@@ -100,126 +92,22 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "J0437-4715\n",
-      "J0613-0200\n",
-      "J0711-6830\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: enterprise.pulsar: WARNING: Could not find pulsar distance for PSR J1017-7156. Setting value to 1 with 20% uncertainty.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "J1017-7156\n",
-      "J1022+1001\n",
-      "J1024-0719\n",
-      "J1045-4509\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: enterprise.pulsar: WARNING: Could not find pulsar distance for PSR J1125-6014. Setting value to 1 with 20% uncertainty.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "J1125-6014\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: enterprise.pulsar: WARNING: Could not find pulsar distance for PSR J1446-4701. Setting value to 1 with 20% uncertainty.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "J1446-4701\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: enterprise.pulsar: WARNING: Could not find pulsar distance for PSR J1545-4550. Setting value to 1 with 20% uncertainty.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "J1545-4550\n",
-      "J1600-3053\n",
-      "J1603-7202\n",
-      "J1643-1224\n",
-      "J1713+0747\n",
-      "J1730-2304\n",
-      "J1732-5049\n",
-      "J1744-1134\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: enterprise.pulsar: WARNING: Could not find pulsar distance for PSR J1832-0836. Setting value to 1 with 20% uncertainty.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "J1824-2452A\n",
-      "J1832-0836\n",
-      "J1857+0943\n",
-      "J1909-3744\n",
-      "J1939+2134\n",
-      "J2124-3358\n",
-      "J2129-5721\n",
-      "J2145-0750\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: enterprise.pulsar: WARNING: Could not find pulsar distance for PSR J2241-5236. Setting value to 1 with 20% uncertainty.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "J2241-5236\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "datadir = 'DR2'\n",
     "parfiles = sorted(glob.glob(datadir + '/newpars/*.par'))\n",
-    "timfiles = sorted(glob.glob(datadir + '/toas/*.tim'))\n",
-    "\n",
+    "timfiles = sorted(glob.glob(datadir + '/toas/*.tim'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "psrs=[]\n",
     "for ipsr in range(len(parfiles)):\n",
-    "    psr = Pulsar(parfiles[ipsr], timfiles[ipsr])\n",
+    "    psr = Pulsar(parfiles[ipsr], timfiles[ipsr], ephem=\"DE436\",clk=\"TT(BIPM2018)\")\n",
     "    psrs.append(psr)\n",
     "    print(psr.name)"
    ]
