--- a/bayes_limit.ipynb
+++ b/bayes_limit.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cannot import PINT? Meh...\n",
+      "Do not have mpi4py package.\n"
+     ]
+    }
+   ],
    "source": [
     "import glob\n",
     "import sys\n",
@@ -31,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -9425,24 +9434,6 @@
     "for pta in ptas:\n",
     "    mlhs1.append(pta.get_lnlikelihood(u1b_n106)-pta.get_lnlikelihood(Null) )\n",
     "print(mlhs1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook bayes_limit.ipynb to python\n",
-      "[NbConvertApp] Writing 8217 bytes to bayes_limit.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "!jupyter nbconvert --to python bayes_limit.ipynb"
    ]
   },
   {
