--- a/bayes_limits/plot.ipynb
+++ b/bayes_limits/plot.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
     "fig2x.axis(range2)\n",
     "fig2x.set_xlabel('Frequency (Hz)',size=15)\n",
     "\n",
-    "fig.savefig('upperlimit.pdf')\n"
+    "fig.savefig('upperlimit.pdf',bbox_inches='tight')\n"
    ]
   },
   {
