--- a/bayes_limit.ipynb
+++ b/bayes_limit.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "# import customized files to introduce 2T modes.\n",
     "import gp_bases_new as gp_bases\n",
-    "import pl_prior as gp_priors\n",
+    "import pl_prior_new as gp_priors\n",
     "\n",
     "from enterprise.signals import selections\n",
     "\n",
