Single pulsar analysis.

--- a/noise_fixing.ipynb
+++ b/noise_fixing.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'enterprise'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-a470293c80ca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0menterprise\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpulsar\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPulsar\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0menterprise\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msignals\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msignal_base\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0menterprise\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msignals\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mparameter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'enterprise'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import glob\n",
     "import sys\n",
@@ -53,8 +41,8 @@
     "        groups0.extend([range(ndim)])\n",
     "\n",
     "        groups1 = [range(ndim)]\n",
-    "        outDir0='/home/xuex/DPDM-PPTA/noise_chain/first_run/'+pta.pulsars[0]\n",
-    "        outDir1='/home/xuex/DPDM-PPTA/noise_chain/second_run/'+pta.pulsars[0]\n",
+    "        outDir0='noise_chain/first_run/'+pta.pulsars[0]\n",
+    "        outDir1='noise_chain/second_run/'+pta.pulsars[0]\n",
     "\n",
     "        if ro==False:\n",
     "                x0 = np.zeros(ndim)\n",
@@ -225,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
